# lemon

./: .gitignore  BitBoard.hpp  Board.hpp  Board0x88.hpp  CMakeLists.txt  Move.hpp  MoveList.hpp  PERFORMANCE-RESULTS.txt  PerftData.hpp  Piece.hpp  README.md  Timers.hpp  bb_definitions.hpp  board0x88_constants.hpp  engine_constants.hpp  gen_target_masks.cpp  kindergarten.txt  lemon.cpp  lemon.hpp  magic_bitboards.txt  perft0x88.cpp  perftbb.cpp  utility_constants.hpp  utility_functions.hpp
old/: Board.hpp  Move.hpp  utility_constants.hpp
